
add_library(LoginServershared
    CentralServerConnection.cpp
    CentralServerConnection.h
    ClientConnection.cpp
    ClientConnection.h
    ConfigLoginServer.cpp
    ConfigLoginServer.h
    ConsoleCommandParser.cpp
    ConsoleCommandParser.h
    ConsoleCommandParserLoginServer.cpp
    ConsoleCommandParserLoginServer.h
    ConsoleManager.cpp
    ConsoleManager.h
    CSToolConnection.cpp
    CSToolConnection.h
    DatabaseConnection.cpp
    DatabaseConnection.h
    FirstLoginServer.h
    LoginServer.cpp
    LoginServer.h
    LoginServerRemoteDebugConnection.cpp
    LoginServerRemoteDebugConnection.h
    LoginServerRemoteDebugSetup.cpp
    LoginServerRemoteDebugSetup.h
    PingConnection.cpp
    PingConnection.h
    PurgeManager.cpp
    PurgeManager.h
    SessionApiClient.cpp
    SessionApiClient.h
    TaskChangeStationId.cpp
    TaskChangeStationId.h
    TaskClaimRewards.cpp
    TaskClaimRewards.h
    TaskCreateCharacter.cpp
    TaskCreateCharacter.h
    TaskDeleteCharacter.cpp
    TaskDeleteCharacter.h
    TaskEnableCharacter.cpp
    TaskEnableCharacter.h
    TaskGetAccountForPurge.cpp
    TaskGetAccountForPurge.h
    TaskGetAvatarList.cpp
    TaskGetAvatarList.h
    TaskGetCharactersForDelete.cpp
    TaskGetCharactersForDelete.h
    TaskGetClusterList.cpp
    TaskGetClusterList.h
    TaskGetValidationData.cpp
    TaskGetValidationData.h
    TaskRegisterNewCluster.cpp
    TaskRegisterNewCluster.h
    TaskRenameCharacter.cpp
    TaskRenameCharacter.h
    TaskRestoreCharacter.cpp
    TaskRestoreCharacter.h
    TaskSetPurgeStatus.cpp
    TaskSetPurgeStatus.h
    TaskToggleCharacterDisable.cpp
    TaskToggleCharacterDisable.h
    TaskToggleCompletedTutorial.cpp
    TaskToggleCompletedTutorial.h
    TaskUpdatePurgeAccountList.cpp
    TaskUpdatePurgeAccountList.h
    TaskUpgradeAccount.cpp
    TaskUpgradeAccount.h
)
